test/libsolidity/syntaxTests/arrayLength/invalid_expression_1.sol
contract C {
    uint[-true] ids;
}
// ----
// TypeError: (22-27): Invalid array length, expected integer literal or constant expression.
